fixed background image on iOS devices

--- a/css/screen.css
+++ b/css/screen.css
@@ -83,7 +83,7 @@ a:hover {
 .introduction {
   min-width: 100%;
   min-height: 100%;
-  background: url("/img/background.jpg") no-repeat center center fixed;
+  background: url("/img/background.jpg") no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
